After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706705 - Ctrl+C and Ctrl+V no longer work in 3.9.90
Ctrl+C and Ctrl+V no longer work in 3.9.90
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Keyboardability
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-24 09:27 UTC by Elad Alfassa
Modified: 2013-08-24 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Elad Alfassa 2013-08-24 09:27:39 UTC
Using nautlius 3.9.90, ctrl+v does nothing and ctrl+c opens the search field.
Comment 1 Cosimo Cecchi 2013-08-24 15:28:12 UTC
Indeed, thanks for the report, I pushed a fix to git master.
This was a fallout due to the migration away from GtkStock items.