Fix Copy/Cut/Paste action acceks not working

We lost these accels when we migrated away from GtkStock items.

https://bugzilla.gnome.org/show_bug.cgi?id=706705